Add goal rank page, group match page and update home page.

--- a/front_end/qml.qrc
+++ b/front_end/qml.qrc
@@ -3,5 +3,8 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>HomePage.qml</file>
+        <file>GoalRank.qml</file>
+        <file>Knockout.qml</file>
+        <file>GroupMatch.qml</file>
     </qresource>
 </RCC>
