Add history matches page.

--- a/front_end/qml.qrc
+++ b/front_end/qml.qrc
@@ -8,5 +8,6 @@
         <file>GroupMatch.qml</file>
         <file>KnockoutBox.qml</file>
         <file>TeamEvents.qml</file>
+        <file>FinishedMatch.qml</file>
     </qresource>
 </RCC>
